# cmake-reuse-library-builds-example

./: readme.md
interface_lib/: CMakeLists.txt
interface_lib/include/: interface_lib.h
project_a/: CMakeLists.txt
project_a/src/: main.cpp
project_b/: CMakeLists.txt
static_lib/: CMakeLists.txt
static_lib/include/: static_lib.h
static_lib/src/: static_lib.cpp
